# code-scanner

./: .clang-format  .gitmodules  CMakeLists.txt  Dockerfile  README.md  clang_download.sh  classes.dia  code-scanner.conf  config.json
idl/: database.fbs  lsp_struct.fbs
scripts/: flatc_install.py  ubuntu_install.py
src/: main.cpp  parser.cpp  parser.hpp  string_array.hpp
src/app/: CMakeLists.txt
src/app/src/: config.cpp  config.hpp  main.cpp  utils.cpp  utils.hpp
src/lib/: CMakeLists.txt
src/lib/idl/: database.fbs
src/lib/include/code-scanner/: Capabilities.hpp  ErrorCodes.hpp  Location.hpp  Params.hpp  Position.hpp  Range.hpp  ResponseError.hpp  code-scanner.hpp
src/lib/src/: ErrorCodes.cpp  Parser_Impl.cpp  Parser_Impl.hpp  code-scanner.cpp  compile_command.cpp  compile_command.hpp  compile_database_t.cpp  compile_database_t.hpp  config.cpp  config.hpp  file.hpp  filesystem.hpp  functional.cpp  functional.hpp  hash_combine.hpp  parser.cpp  parser.hpp  repository.hpp  serializer.hpp  symbol.hpp  translation_unit_t.cpp  translation_unit_t.hpp  utils.cpp  utils.hpp
src/lib/test/: CMakeLists.txt  compile_command_test.cpp  compile_commands.json  compile_database_test.cpp  main.cpp  symbol_test.cpp
tests/: CMakeLists.txt  test_parser.cpp
tests/data/: index.cpp
